--- a/src/main/resources/assets/dynamx_basics/css/vehicle_hud.css
+++ b/src/main/resources/assets/dynamx_basics/css/vehicle_hud.css
@@ -6,10 +6,15 @@
 
 #siren_hud
 {
-    top: 5px;
+    top: 20px;
     left: 5px;
-    height: 20px;
+    height: 200px;
 }
+
+#siren_hud>label
+ {
+    top: auto;
+ }
 
 #fuel_level {
     width: 100%;
