--- a/src/main/resources/assets/dynamx_basics/css/vehicle_hud.css
+++ b/src/main/resources/assets/dynamx_basics/css/vehicle_hud.css
@@ -4,6 +4,21 @@
   font-size: 120px;
 }
 
+/* FuelTankController */
+
+/*#engine_fuel
+{
+    width: 100%;
+    height: 20px;
+    top: 96%;
+    bottom: 4%;
+    left: 50%;
+    right: 50%;
+    text-align: center;
+}*/
+
+/* BasicsAddonController */
+
 #siren_hud
 {
     top: 20px;
@@ -15,18 +30,6 @@
  {
     top: auto;
  }
-
-#fuel_level {
-    width: 100%;
-    height: 20px;
-    top: 80%;
-    bottom: 20%;
-    left: 50%;
-    right: 50%;
-    text-align: center;
-
-    background-image: url("dynamx_basics:textures/fuel_empty.png");
-}
 
 .hud_icon {
     width: 10px;
