New fuel consumption code

--- a/src/main/resources/assets/dynamx_basics/css/vehicle_hud.css
+++ b/src/main/resources/assets/dynamx_basics/css/vehicle_hud.css
@@ -19,6 +19,14 @@
 
 /* BasicsAddonController */
 
+/**
+Because .speed_pane has a texture
+ */
+#fuel_gauge
+{
+    background-image: none;
+}
+
 #siren_hud
 {
     top: 20px;
